--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     <a class="nav-link" href="#cart">Cart</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/trendsouk/about/">About Us</a>
+                    <a class="nav-link" href="/trendsouk/about.html">About Us</a>
                 </li>
             </ul>
             <form class="form-inline my-2 my-lg-0">
